<resources>
    <string name="app_name">Good Buddy</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="login_welcome_message">Welcome to Good Buddy!</string>
    <string name="login_password_hint">Password</string>
    <string name="login_username_hint">Username</string>
    <string name="login_submit_text">Login</string>

    <string name="registration_submit_text">Sign up!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
